<resources>
    <string name="app_name">chatApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="newGroup">New Group</string>
    <string name="contacts">Contacts</string>
    <string name="savedMessages">Saved Messages</string>
    <string name="setting">Setting</string>
    <string name="mobilePhone">Phone number</string>
    <string name="verify">Verify</string>
    <string name="next">Next</string>
    <string name="code">Code</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message</string>
    <string name="user_name">User Name</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="type_new_username">Type new username</string>
    <string name="save">Save</string>
    <string name="view_profile">View profile</string>
    <string name="block">Block</string>
    <string name="confirm">Confirm</string>
    <string name="unblock">Unblock</string>
    <string name="Confirmationmessage">\"By confirming this you won\'t be able to send or recieve messages from \"</string>
    <string name="groups">Groups</string>
    <string name="blocked_tv">You can\'t reply to this conversation</string>
    <string name="delete_message">Delete Message</string>
    <string name="save_message">Save Message</string>
    <string name="forward_message">Forward Message</string>
    <string name="rec_length">Rec Length</string>
    <string name="chats">Chats</string>
</resources>