<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chats"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/chats" />
    <item
        android:id="@+id/Groups"
        android:title="@string/groups"
        android:icon="@drawable/ic_baseline_group_24"/>
    <item
        android:id="@+id/newGroupOption"
        android:title="@string/newGroup"
        android:icon="@drawable/ic_baseline_group_24"/>
    <item
        android:id="@+id/contactsOption"
        android:title="@string/contacts"
        android:icon="@drawable/ic_baseline_perm_contact_calendar_24"/>
    <item
    android:id="@+id/savedMessagesOption"
    android:title="@string/savedMessages"
    android:icon="@drawable/ic_baseline_bookmark_24"/>
    <item
        android:id="@+id/settingOption"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_applications_24"/>
</menu>